# van-der-waals

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  readme.md  source.files
cl/: kernel.c  kernel.cl  opencl.h
gl/: shader.frag  shader.vert
source/: gl.c  gl.h  main.cpp
